--- a/MACDNotification/res/layout/list_item.xml
+++ b/MACDNotification/res/layout/list_item.xml
@@ -2,30 +2,21 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:padding="10dp">
 
-    <EditText
+    <TextView
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:id="@+id/editTextSymbol"
-            android:textSize="12sp"
-            android:inputType="text"/>
+            android:id="@+id/textViewSymbol"/>
 
-    <Button
+    <ImageView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/validate"
-            android:textSize="12sp"
-            android:id="@+id/buttonValidate"
-            />
-
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="@string/remove"
-            android:textSize="12sp"
-            android:id="@+id/buttonRemove"
+            android:src="@android:drawable/ic_delete"
+            android:id="@+id/imageViewDelete"
+            android:contentDescription="@string/content_desc_delete"
             />
 </LinearLayout>
