--- a/MACDNotification/res/layout/activity_macd.xml
+++ b/MACDNotification/res/layout/activity_macd.xml
@@ -1,57 +1,87 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ActivityMACD"
-                tools:ignore="MergeRootFrame">
-
-    <ImageView
-            android:id="@+id/buttonNew"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@android:drawable/ic_input_add"
-            android:paddingLeft="25dp"
-            android:onClick="onNewSymbolClicked"
-            android:contentDescription="@string/content_desc"/>
-
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    tools:context=".ActivityMACD"
+    tools:ignore="MergeRootFrame" >
 
     <LinearLayout
-            android:id="@+id/addLayout"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+        android:id="@+id/layoutAddButtons"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/buttonNewSmybol"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/buttonNew"
-            android:visibility="gone">
+            android:layout_weight="1"
+            android:clickable="true"
+            android:contentDescription="@string/content_desc"
+            android:drawableLeft="@android:drawable/ic_input_add"
+            android:gravity="center_vertical"
+            android:onClick="onNewSymbolClicked"
+            android:paddingLeft="10dp"
+            android:text="@string/new_symbol"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/buttonNewGroup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:contentDescription="@string/content_desc"
+            android:drawableRight="@android:drawable/ic_input_add"
+            android:gravity="center_vertical|right"
+            android:onClick="onNewGroupClicked"
+            android:paddingRight="10dp"
+            android:text="@string/new_group"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/addLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layoutAddButtons"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:visibility="gone" >
 
         <EditText
-                android:id="@+id/editTextNewSymbol"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:inputType="text"/>
+            android:id="@+id/editTextNewSymbol"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:inputType="text" />
 
         <Spinner
-                android:id="@+id/spinnerGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent">
+            android:id="@+id/spinnerGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent" >
         </Spinner>
 
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:src="@android:drawable/ic_input_add"
-                android:paddingRight="25dp"
-                android:onClick="onAddSymbolClicked"
-                android:contentDescription="@string/content_desc"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:clickable="true"
+            android:contentDescription="@string/content_desc"
+            android:drawableRight="@android:drawable/ic_input_add"
+            android:onClick="onAddSymbolClicked"
+            android:text="@string/add" />
     </LinearLayout>
 
     <ExpandableListView
-            android:id="@+id/listView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_below="@+id/addLayout">
+        android:id="@+id/listView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/addLayout">
     </ExpandableListView>
 
 </RelativeLayout>
