--- a/MACDNotification/res/layout/list_item.xml
+++ b/MACDNotification/res/layout/list_item.xml
@@ -6,18 +6,32 @@
               android:layout_height="wrap_content"
               android:padding="10dp">
 
-    <TextView
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
+        <TextView
             android:id="@+id/textViewSymbol"
-            android:gravity="center_vertical"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/textViewSymbolData"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical" />
+
+    </LinearLayout>
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:src="@android:drawable/ic_delete"
-            android:id="@+id/imageViewDelete"
-            android:contentDescription="@string/content_desc_delete"
-            />
+        android:id="@+id/imageViewDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/content_desc_delete"
+        android:src="@android:drawable/ic_delete"
+        android:layout_gravity="center" />
+
 </LinearLayout>
