--- a/MACDNotification/res/layout/list_group_item.xml
+++ b/MACDNotification/res/layout/list_group_item.xml
@@ -2,15 +2,25 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
               android:padding="10dp">
+              
+        <LinearLayout
+        	android:layout_width="0dp"
+        	android:layout_height="wrap_content"
+        	android:layout_weight="1"
+        	android:orientation="vertical" >
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="25dp"
-            android:id="@+id/textViewGroupName"/>
+    		<TextView
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content"
+            	android:paddingLeft="25dp"
+            	android:id="@+id/textViewGroupName"/>
+
+    	</LinearLayout>
+
+
     
     <ImageView
         android:id="@+id/imageViewDeleteGroup"
