--- a/MACDNotification/res/layout/list_group_item.xml
+++ b/MACDNotification/res/layout/list_group_item.xml
@@ -1,33 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:padding="10dp">
-              
-        <LinearLayout
-        	android:layout_width="0dp"
-        	android:layout_height="wrap_content"
-        	android:layout_weight="1"
-        	android:orientation="vertical" >
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
-    		<TextView
-            	android:layout_width="fill_parent"
-            	android:layout_height="wrap_content"
-            	android:paddingLeft="25dp"
-            	android:id="@+id/textViewGroupName"/>
+    <TextView
+        android:id="@+id/textViewGroupName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingLeft="25dp" />
 
-    	</LinearLayout>
-
-
-    
     <ImageView
         android:id="@+id/imageViewDeleteGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:contentDescription="@string/content_desc_delete_group"
-        android:src="@android:drawable/ic_delete"
-        android:layout_gravity="center" />
+        android:src="@android:drawable/ic_delete" />
 
 </LinearLayout>
