--- a/MACDNotification/res/layout/list_item.xml
+++ b/MACDNotification/res/layout/list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:padding="10dp">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="10dp" >
 
     <LinearLayout
         android:layout_width="0dp"
@@ -15,15 +15,12 @@
         <TextView
             android:id="@+id/textViewSymbol"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textViewSymbolData"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical" />
-
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <ImageView
@@ -31,7 +28,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/content_desc_delete"
-        android:src="@android:drawable/ic_delete"
-        android:layout_gravity="center" />
+        android:src="@android:drawable/ic_delete" />
 
 </LinearLayout>
