--- a/MACDNotification/res/layout/activity_macd.xml
+++ b/MACDNotification/res/layout/activity_macd.xml
@@ -44,37 +44,55 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <LinearLayout
+    <LinearLayout 
         android:id="@+id/addLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/layoutAddButtons"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:visibility="gone" >
-
-        <EditText
-            android:id="@+id/editTextNewSymbol"
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="1"
-            android:inputType="text" />
-
-        <Spinner
-            android:id="@+id/spinnerGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent" >
-        </Spinner>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:clickable="true"
-            android:contentDescription="@string/content_desc"
-            android:drawableRight="@android:drawable/ic_input_add"
-            android:onClick="onAddSymbolClicked"
-            android:text="@string/add" />
+        android:visibility="gone">
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal" >
+	
+	        <EditText
+	            android:id="@+id/editTextNewSymbol"
+	            android:layout_width="0dp"
+	            android:layout_height="fill_parent"
+	            android:layout_weight="1"
+	            android:inputType="text" />
+	
+	        <Spinner
+	            android:id="@+id/spinnerGroup"
+	            android:layout_width="wrap_content"
+	            android:layout_height="fill_parent" >
+	        </Spinner>
+	
+	        <TextView
+	            android:layout_width="wrap_content"
+	            android:layout_height="fill_parent"
+	            android:clickable="true"
+	            android:contentDescription="@string/content_desc"
+	            android:drawableRight="@android:drawable/ic_input_add"
+	            android:onClick="onAddSymbolClicked"
+	            android:text="@string/add" />
+	    </LinearLayout>
+	    <LinearLayout
+	        android:id="@+id/ruleNo1Layout"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal"
+        	android:visibility="gone">
+	        <EditText
+	            android:id="@+id/editTextRuleNo1Value"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent"
+	            android:hint="@string/rule_no_1_valuation"
+	            android:inputType="numberDecimal" />
+	    </LinearLayout>
     </LinearLayout>
 
     <ExpandableListView
